[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/gnome/shell/Shell.gd" type="Script" id=1]
[ext_resource path="res://characters/gnome/explosion/Explosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/gnome/shell/sprites/shell.tres" type="Texture" id=3]
[ext_resource path="res://utils/trail/Trail2D.gd" type="Script" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.142857, 0.909091 ), 0.0, 0.0, 0, 0, Vector2( 0.379121, 0.590909 ), 0.0, 0.0, 0, 0, Vector2( 0.631868, 0.9 ), 0.0, 0.0, 0, 0, Vector2( 0.945055, 0.572727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.5, 5.5 )

[node name="Shell" type="Area2D"]
collision_layer = 8
collision_mask = 65
script = ExtResource( 1 )
explosion = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -5.5 )

[node name="Trail2D" type="Line2D" parent="Sprite"]
width_curve = SubResource( 1 )
default_color = Color( 0.501961, 0.501961, 0.501961, 1 )
antialiased = true
script = ExtResource( 4 )
trail_length = 50
degen_rate = 5
auto_z_index = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 19.5, 0 )
shape = SubResource( 2 )

[node name="ExplosionSpawnPoint" type="Position2D" parent="."]
position = Vector2( 30, 0 )

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, -5.5, 39, 11 )

[node name="DelayTriggerTimer" type="Timer" parent="."]
one_shot = true
